RESOLVED FIXED175761
[EME] HTMLMediaElement: basic implementations of 'Attempt to Decrypt', 'Attempt to Resume Playback If Necessary'
https://bugs.webkit.org/show_bug.cgi?id=175761
Summary [EME] HTMLMediaElement: basic implementations of 'Attempt to Decrypt', 'Attem...
Zan Dobersek
Reported 2017-08-20 23:58:04 PDT
[EME] HTMLMediaElement: basic implementations of 'Attempt to Decrypt', 'Attempt to Resume Playback If Necessary'
Attachments
Patch (10.29 KB, patch)
2017-08-21 00:42 PDT, Zan Dobersek
no flags
Patch for landing (10.32 KB, patch)
2017-08-21 05:29 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-08-21 00:42:26 PDT
Build Bot
Comment 2 2017-08-21 00:45:26 PDT
Attachment 318617 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/encryptedmedia/MediaKeys.cpp:140: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xabier Rodríguez Calvar
Comment 3 2017-08-21 03:07:29 PDT
Comment on attachment 318617 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=318617&action=review > Source/WebCore/ChangeLog:15 > + the platform layer. The gist of the algorithm is to invoke the decryption gist? > Source/WebCore/ChangeLog:17 > + retrieved from the MediaKeys object that's associated with this media I've never seen that's contracted when that is the subordinate pronoun, but I might be wrong... > Source/WebCore/Modules/encryptedmedia/MediaKeys.cpp:140 > + [](auto& session) { return !session->isClosed(); }); Fix the style checker complain. And it looks like you should leave a space between the [] and the (
Zan Dobersek
Comment 4 2017-08-21 05:29:39 PDT
Created attachment 318628 [details] Patch for landing
Zan Dobersek
Comment 5 2017-08-21 05:56:46 PDT
Comment on attachment 318628 [details] Patch for landing Clearing flags on attachment: 318628 Committed r220962: <http://trac.webkit.org/changeset/220962>
Zan Dobersek
Comment 6 2017-08-21 05:56:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-08-21 05:57:55 PDT
Michael Catanzaro
Comment 8 2017-08-21 15:34:07 PDT
(In reply to Xabier Rodríguez Calvar from comment #3) > > Source/WebCore/ChangeLog:15 > > + the platform layer. The gist of the algorithm is to invoke the decryption > > gist? It means "the general idea" (of the algorithm). > I've never seen that's contracted when that is the subordinate pronoun, but > I might be wrong... It's fine!
Note You need to log in before you can comment on or make changes to this bug.